--- a/Expense-Tracker/src/main/resources/application.properties
+++ b/Expense-Tracker/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=Expense-Tracker
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/financetracker
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
