--- a/Expense-Tracker/src/main/resources/application.properties
+++ b/Expense-Tracker/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+api.security.token.secret=0Opou1MQC3Ik42WN5VVE8Fp0cr5uD4cUTMu9RtfclRO
